crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_type_fn-10.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Fn(
        Fn {
            params: [
                Var(
                    Var {
                        name: "A",
                    },
                ),
                Var(
                    Var {
                        name: "B",
                    },
                ),
            ],
            ret: Some(
                Var(
                    Var {
                        name: "R",
                    },
                ),
            ),
        },
    ),
)
