crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_type_fn-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Fn(
        Fn {
            params: [
                Path(
                    Path {
                        segments: [
                            Segment {
                                ident: "A",
                                generic_args: [],
                            },
                        ],
                    },
                ),
            ],
            ret: None,
        },
    ),
)
