crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_type_fn-5.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Fn {
        params: [
            Path {
                segments: [
                    Segment {
                        ident: "A",
                        generic_args: [],
                    },
                ],
            },
            Path {
                segments: [
                    Segment {
                        ident: "B",
                        generic_args: [],
                    },
                ],
            },
        ],
        ret: None,
    },
)
