crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_type_fn-6.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Fn {
        params: [],
        ret: Some(
            Path {
                segments: [
                    Segment {
                        ident: "R",
                        generic_args: [],
                    },
                ],
            },
        ),
    },
)
