crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_type_fn-7.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
Fn {
    params: [
        Path {
            segments: [
                Segment {
                    ident: "A",
                    generic_args: [],
                },
            ],
        },
    ],
    ret: Some(
        Path {
            segments: [
                Segment {
                    ident: "R",
                    generic_args: [],
                },
            ],
        },
    ),
}
