crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_type_fn-9.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Fn(
        Fn {
            params: [
                Path(
                    Path {
                        segments: [
                            Segment {
                                ident: "A",
                                generic_args: [],
                            },
                        ],
                    },
                ),
                Path(
                    Path {
                        segments: [
                            Segment {
                                ident: "B",
                                generic_args: [],
                            },
                        ],
                    },
                ),
            ],
            ret: Some(
                Path(
                    Path {
                        segments: [
                            Segment {
                                ident: "R",
                                generic_args: [],
                            },
                        ],
                    },
                ),
            ),
        },
    ),
)
