crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_type_fn.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Fn(
        Fn {
            params: [],
            ret: None,
        },
    ),
)
