crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_type_group.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Var(
        Var {
            name: "T",
        },
    ),
)
