crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_type_optional.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Opt {
        inner: Path {
            segments: [
                Segment {
                    ident: "T",
                    generic_args: [],
                },
            ],
        },
    },
)
